fix remaining failing tests